// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary page 1 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should render ExpensesSummary page mult 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $235.00
  </h1>
</div>
`;
